--- a/sharding-proxy/src/main/resources/conf/config-sharding.yaml
+++ b/sharding-proxy/src/main/resources/conf/config-sharding.yaml
@@ -8,7 +8,7 @@
 # 
 ######################################################################################################
 
-#schemaName: sharding_db
+schemaName: sharding_db
 #
 dataSources:
   single_source:
