改造源码  增加特定的类型 对于当前数据库的解释语言 全部返回成功操作

--- a/sharding-proxy/src/main/resources/conf/config-sharding.yaml
+++ b/sharding-proxy/src/main/resources/conf/config-sharding.yaml
@@ -23,7 +23,7 @@ dataSources:
 
 shardingRule:
   tables:
-    t_order:
+    loan_transfer_contract:
       actualDataNodes: single_source.loan_transfer_contract_${0..127}
       tableStrategy:
         inline:
